<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/video_form_id"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_name"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textCursorDrawable="@null"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/edit_text_serial_number"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textCursorDrawable="@null"
        android:hint="@string/numero_serie" />

    <EditText
        android:id="@+id/edit_text_user"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textCursorDrawable="@null"
        android:hint="@string/usuario" />

    <EditText
        android:id="@+id/edit_text_password"
        style="@style/edit_text_style"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textCursorDrawable="@null"
        android:hint="@string/password" />
</LinearLayout>
